--- a/app.json
+++ b/app.json
@@ -1,39 +1,31 @@
+
+
 {
   "expo": {
     "name": "PlantaE",
-    "slug": "PlantaE",
-    "version": "1.0.0",
+    "slug": "plantae",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "plantae",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/notification-icon.png",
+          "color": "#3BB39D",
+          "sounds": ["alarm.wav"]
+        }
+      ]
+    ],
+    "notification": {
+      "iosDisplayInForeground": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.exemplo.plantae",
+      "permissions": ["VIBRATE", "WAKE_LOCK"],
+      "useNextNotificationsApi": true
     },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router"
-    ],
-    "experiments": {
-      "typedRoutes": true
+    "ios": {
+      "bundleIdentifier": "com.exemplo.plantae"
     }
   }
 }
