--- a/app.json
+++ b/app.json
@@ -1,5 +1,3 @@
-
-
 {
   "expo": {
     "name": "PlantaE",
@@ -12,16 +10,23 @@
         {
           "icon": "./assets/notification-icon.png",
           "color": "#3BB39D",
-          "sounds": ["alarm.wav"]
+          "sounds": [
+            "alarm.wav"
+          ]
         }
-      ]
+      ],
+      "expo-font",
+      "expo-router"
     ],
     "notification": {
       "iosDisplayInForeground": true
     },
     "android": {
       "package": "com.exemplo.plantae",
-      "permissions": ["VIBRATE", "WAKE_LOCK"],
+      "permissions": [
+        "VIBRATE",
+        "WAKE_LOCK"
+      ],
       "useNextNotificationsApi": true
     },
     "ios": {
