--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": [
         "./*"
@@ -13,3 +16,4 @@
     "**/*.tsx"
   ]
 }
+
